# aref

./: .gitignore  README.ja.md  README.ko.md  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
scripts/: tauri.mjs
src/: main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/icons/: icon.icns
src-tauri/nsis/: installer-hooks.nsh
src-tauri/src/: clipboard_files.rs  ima2_sidecar.rs  image_metadata.rs  lib.rs  main.rs  openai_provider.rs  project_persistence.rs  provider_logs.rs  system_fonts.rs
src/app/: App.tsx
src/assets/styles/: global.css
src/components/icons/: ui-icons.tsx
src/components/layout/: AppErrorBoundary.tsx  AppShell.tsx  DeveloperLogDrawer.tsx  InspectorPanel.tsx  LeftSidebar.tsx  PhotoViewerDialog.test.tsx  PhotoViewerDialog.tsx  ToastViewport.tsx  ToolbarRail.tsx  virtual-list.test.ts  virtual-list.ts
src/domain/assets/: asset-arrangement.test.ts  asset-arrangement.ts  asset-geometry.test.ts  asset-geometry.ts  asset-order.test.ts  asset-order.ts  generated-asset-utils.ts  imported-asset-utils.test.ts  imported-asset-utils.ts  text-asset-utils.ts  types.ts
src/domain/camera/: camera-math.test.ts  camera-math.ts  types.ts
src/domain/canvas/: render-scale.test.ts  render-scale.ts
src/domain/groups/: group-utils.ts  types.ts
src/domain/jobs/: generation-layout.test.ts  generation-layout.ts  job-state-machine.test.ts  job-state-machine.ts  types.ts
src/domain/project/: sample-project.ts  types.ts
src/domain/providers/: provider-management.test.ts  provider-management.ts  types.ts
src/domain/selection/: types.ts
src/domain/shared/: geometry.ts  rect-arrangement.ts  types.ts
src/domain/toasts/: types.ts
src/domain/ui/: types.ts
src/features/ai/: contextual-sheet.test.ts  contextual-sheet.ts  use-generation-harness.ts
src/features/providers/: use-provider-management.ts
src/features/settings/: generation-draft-storage.test.ts  generation-draft-storage.ts  preferences-storage.test.ts  (+3 more)
src/state/: app-store.test.ts  app-store.ts
src/test/: e2e-smoke.test.ts
(+59 files in other folders)
