[package]
name = "aref"
version = "0.5.0"
description = "Aref desktop reference canvas"
authors = ["OpenAI Codex"]
license = ""
repository = "https://github.com/hw4n/aref"
default-run = "aref"
edition = "2021"
rust-version = "1.77"

[lib]
name = "aref_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "multipart", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2.0.0", features = [] }
tauri-plugin-dialog = "2.0.0"
tokio = { version = "1.48", features = ["macros", "rt", "sync", "time"] }
uuid = { version = "1.10", features = ["v4"] }
zip = { version = "2.2", default-features = false, features = ["deflate"] }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_System_DataExchange",
    "Win32_System_Memory",
    "Win32_UI_Shell",
] }
